gov_3.4 - tooltip localisation

--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -236,3 +236,4 @@ TT_ani_177_injury_is_worst;the injuries goes wrong;les blessures s'empirent;;;;;
 TT_ani_180_went_well;everything goes well;tout se passe comme prévu;;;;;;;;;;;;x
 TT_ani_180_went_wrong;an accident occur;tout ne se passe pas comme prévu;;;;;;;;;;;;x
 TT_ani_186_learned_speciality;[Root.FromFromFrom.GetTitledFirstName] a lot more than expected of [Root.FromFromFrom.GetHerselfHimself];[Root.FromFromFrom.GetTitledFirstName] a bien mieu appris son rôle que ce qui était attendu;;;;;;;;;;;;x
+TT_ani_191_random_trait;gaining a random horse rulership trait;gagner un trait de dirigeant cheval aléatoire;;;;;;;;;;;;x
