--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -134,7 +134,7 @@ holy_autority_animal_cooldown;_;;;;;;;;;;;;x
 hedge_province_frind_with_hedgehog;_;;;;;;;;;;;;;x
 panda_conversion_quest_cooldown;_;;;;;;;;;;;;;x
 panda_plot_cooldown;_;;;;;;;;;;;;;x
-panda_instability_war_coolown;_;;;;;;;;;;;;;x
+panda_instability_war_cooldown;_;;;;;;;;;;;;;x
 
 
 #### duck update
@@ -224,3 +224,4 @@ dog_interest_implication;governance implication;implication du dirigeant;;;;;;;;
 ##### horse modifier
 horse_warrior_malus_1;unhappy vassals;vassaux mécontents;;;;;;;;;;;;x
 horse_warrior_malus_2;unmobilised warrior;combatants non mobilisés;;;;;;;;;;;;x
+horse_warrior_malus_3;nnhappy merchants;marchand en colère;;;;;;;;;;;;x
