--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -225,3 +225,5 @@ dog_interest_implication;governance implication;implication du dirigeant;;;;;;;;
 horse_warrior_malus_1;unhappy vassals;vassaux mécontents;;;;;;;;;;;;x
 horse_warrior_malus_2;unmobilised warrior;combatants non mobilisés;;;;;;;;;;;;x
 horse_warrior_malus_3;nnhappy merchants;marchand en colère;;;;;;;;;;;;x
+horse_warrior_malus_4;distrustful commanders;commandant méfiants;;;;;;;;;;;;x
+horse_warrior_malus_5;agitated paysants;Paysants agités;;;;;;;;;;;;x
