--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -226,4 +226,5 @@ horse_warrior_malus_1;unhappy vassals;vassaux mécontents;;;;;;;;;;;;x
 horse_warrior_malus_2;unmobilised warrior;combatants non mobilisés;;;;;;;;;;;;x
 horse_warrior_malus_3;nnhappy merchants;marchand en colère;;;;;;;;;;;;x
 horse_warrior_malus_4;distrustful commanders;commandant méfiants;;;;;;;;;;;;x
-horse_warrior_malus_5;agitated paysants;Paysants agités;;;;;;;;;;;;x
+horse_warrior_malus_5;agitated paysants;paysants agités;;;;;;;;;;;;x
+horse_conversion_tyrany;tyranical ritual;rituel tyranique;;;;;;;;;;;;x
