--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -327,6 +327,8 @@ horse_abdicate;abdicate;Abdiquer;;;;;;;;;;;;x
 horse_abdicate_desc;As a §Y[Root.getHorseRankTitle]§!, loosing its [Root.getHorseRank] guard means losing subject respect. As it is not possible for a horse to recreate the [Root.getHorseRank] guard, abdicate to a respected ruler is the only option to keep its honor.;En tant que §Y[Root.getHorseRankTitle]§!, perdre sa [Root.getHorseRank] guard signifie que mes sujet ne me respectent plus. Comme il n'est plus possible de la récupérer à nouveau, abdique reste un choix pour garantir la stabilité du pays;;;;;;;;;;;;x
 horse_ritual_conversion;Make the conversion ritual;Faire le rituel de conversion;;;;;;;;;;;;x
 horse_ritual_conversion_desc;It is possible to create a big ritual to transform a living being into a horse. That is seen a little tyranical by its peers;Il est possibler d'organiser un rituel pour transformer un être vivant en cheval. Il est cependant vu comme un peu tyranique;;;;;;;;;;;;x
+horse_ritual_conversion_county;Prepare a big horse ritual;Préparer un grand rituel cheval;;;;;;;;;;;;x
+horse_ritual_conversion_county_desc;Making a big ritual allow a ruler to make its peasants understand the value of the horse hegemony. Ideal to make lands prosperous!;Organiser le grand rituel cheval permet aux paysants de comprendre la suprématie chevale afin d'augmenter la prospérité du territoire;;;;;;;;;;;;x
 
 ### tooltip
 tt_horse_horse_building;Has constructed an horse building;A construit un bâtiment de cheval;;;;;;;;;;;;x
