--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -104,7 +104,7 @@ DESC_126_CAT_INVADE;The cats of [This.GetName] did reproduce. At some point, the
 OPT_126_CAT_TARGET;Is this a new kind of plague?;Est-ce un nouveau fléau?;;;;;;;;;;;;x
 DESC_127_USURP_ID;The cats living in [location.GetName] successfully imprisoned me then ...;Les chats de [location.GetName] ont réussi à m'emprisonner puis à ...;;;;;;;;;;;;x
 OPT_127_USURP_ID;At some point, I feel like a cat...;Je commence à me sentir vivre comme un chat...;;;;;;;;;;;;x
-DESC_129_START_INVASION;After the cat's siege on [FROMFROM.GetName], cat started an invasion there;Après l'occupation de [FROMFROM.GetName], les chats démarrent leurs invasions;;;;;;;;;;;;x
+DESC_129_START_INVASION;After the cat's siege on [Root.Fromfrom.GetName], cat started an invasion there;Après l'occupation de [Root.Fromfrom.GetName], les chats démarrent leurs invasions;;;;;;;;;;;;x
 OPTA_129_I_HATE_THAT;Hope they don't do too much;J'espère qu'ils n'en feront pas trop;;;;;;;;;;;;x
 OPTB_129_I_LIKE_THAT;They will finally become cats?!;Ils vont enfin devenir des chats?!;;;;;;;;;;;x
 DESC_130_INCREASE_DECADENCE;As a cat, stability isn't a given...;En tant que chat, tout le monde sait que la stabilité est loin d'être assuré...;;;;;;;;;;;;x
@@ -152,7 +152,7 @@ CAT_TT_CONSTRUCT_THEIR_TRIBE;The cats build their own tribe;Les chats construise
 CAT_TT_DECLARE_WAR;The cats start a revolt;Les chats se rebellent;;;;;;;;;;;;x
 CAT_TT_HUNTER_INJURED;Many adult are injured by ferocious cats;Beaucoup d'adulte sont blessés par des chats enragé;;;;;;;;;;;;x
 CAT_DECADENCE_INVASION;A decadence invasion begins;Une révolte de décadence commence;;;;;;;;;;;;x
-CAT_TT_ORIGIN_FOUND;I should be warry of [Fromfrom.GetFullName], he must be the sender;Je devrais me méfier de [Fromfrom.GetFullName], il est trop louche dans cette histoire;;;;;;;;;;;;x
+CAT_TT_ORIGIN_FOUND;I should be warry of [Root.Fromfrom.GetFullName], he must be the sender;Je devrais me méfier de [Root.Fromfrom.GetFullName], il est trop louche dans cette histoire;;;;;;;;;;;;x
 
 # dog update
 dog_desc_159;Sometimes, my dog seems weak...;Mon chien semble faible de temps en temps...;;;;;;;;;;;;x
@@ -182,12 +182,12 @@ DOG_TT_WAR_LEVEL_DOWN;Reduce your military implication;Réduit l'implication mili
 DOG_TT_WAR_LEVEL_UP;Increase your military implication;Augmente l'implication militaire;;;;;;;;;;;;x
 
 ## HORSE UPDATE
-DESC_ani_170;The horses seems exited around our horse steppe's building in [this.GetName];Les cheveaux semblent excité autour des places réservés aux cheveaux en [THIS.GetName];;;;;;;;;;;;x
+DESC_ani_170;The horses seems exited around our horse steppe's building in [Root.GetName];Les cheveaux semblent excité autour des places réservés aux cheveaux en [Root.GetName];;;;;;;;;;;;x
 OPTA_ani_170;It is time to use them in festivities!;C'est le moment pour une grande fête en leur honeur;;;;;;;;;;;;x
 OPTB_ani_170;They will soon come back to how they were;Ils vont bientôt revenir comme ils étaient avant;;;;;;;;;;;;x
 DESC_ani_172;The ritual preparation are now over;Les préparations du rituel sont maintenant finis;;;;;;;;;;;;x
 OPT_ani_172;We can start the event;Nous pouvons enfin commencer le rituel;;;;;;;;;;;;x
-DESC_ani_173;The ritual just ended. Everything went as planned. The horse gave us some knowledge.;Le rituel vient de se finir avec succès. J'ai pu me prouver digne de diriger [THIS.GetName].;;;;;;;;;;;;x
+DESC_ani_173;The ritual just ended. Everything went as planned. The horse gave us some knowledge.;Le rituel vient de se finir avec succès. J'ai pu me prouver digne de diriger [Root.GetName].;;;;;;;;;;;;x
 OPT_ani_173;Everyone is happy!;Tout le monde est satisfé!;;;;;;;;;;;;x
 DESC_ani_174;The ritual gone strange. Because of an unknown cause, evoryone seems unconcious;Le rituel a soudainement pris une étrange tournure. Pour une raison inconnu, tout le monde semble inconscient.;;;;;;;;;;;;x
 OPT_ani_174;I am also...;Suis-je aussi...;;;;;;;;;;;;x
